# algorithms

./: .gitignore  CMakeLists.txt
list/: CMakeLists.txt  doubly-linked-list.cpp  doubly-linked-list.h  singly-linked-list.cpp  singly-linked-list.h
square-and-multiply/: CMakeLists.txt  square-and-multiply.cpp  square-and-multiply.h
tests/: CMakeLists.txt  main.cpp  test.cpp
